--- a/search/share/config/config.json
+++ b/search/share/config/config.json
@@ -4,8 +4,9 @@
   },
    "crawler": {
     "URL_CRAWL_LIMIT": 250,
-    "INGEST_SUB_DOMAIN": false
-  },
+    "INGEST_SUB_DOMAIN": false,
+    "HOST_URL": "https://qa-bots.kore.ai"
+   },
   "squid_proxy": {
     "USE_PROXY": false,
     "PROXY_SETTING": {
