--- a/search/share/config/config.json
+++ b/search/share/config/config.json
@@ -4,7 +4,7 @@
   },
    "crawler": {
     "URL_CRAWL_LIMIT": 250,
-    "CRAWL_SUB_DOMAINS": false,
+    "CRAWL_ONLY_SUB_DOMAINS": false,
     "HOST_URL": "https://qa-bots.kore.ai"
    },
   "squid_proxy": {
