--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kore-sales",
+  "name": "findly",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,56 +11,51 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^7.3.4",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
+    "@angular/animations": "~10.0.6",
+    "@angular/cdk": "^10.1.3",
+    "@angular/common": "~10.0.6",
+    "@angular/compiler": "~10.0.6",
+    "@angular/core": "~10.0.6",
+    "@angular/forms": "~10.0.6",
+    "@angular/localize": "~10.0.6",
     "@angular/material": "^7.3.4",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
-    "@ng-bootstrap/ng-bootstrap": "^4.1.0",
-    "angular-font-awesome": "^3.1.2",
-    "bootstrap": "^4.3.1",
-    "brunch": "^3.0.0",
-    "core-js": "^2.5.4",
-    "d3": "^5.9.2",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.4.1",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
-    "ngx-perfect-scrollbar": "^8.0.0",
-    "ngx-toastr": "^10.1.0",
+    "@angular/platform-browser": "~10.0.6",
+    "@angular/platform-browser-dynamic": "~10.0.6",
+    "@angular/router": "~10.0.6",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "bootstrap": "^4.5.0",
+    "d3": "^5.16.0",
+    "jquery": "^3.5.1",
+    "moment": "^2.27.0",
+    "ngx-perfect-scrollbar": "^10.0.1",
+    "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
-    "rxjs": "^6.3.3",
-    "sweetalert2": "^9.10.12",
-    "tslib": "^1.9.0",
+    "rxjs": "~6.5.5",
+    "tslib": "^2.0.0",
     "underscore": "^1.10.2",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.5",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/d3": "^5.7.1",
-    "@types/jasmine": "~2.8.8",
+    "@angular-devkit/build-angular": "~0.1000.5",
+    "@angular/cli": "^10.0.7",
+    "@angular/compiler-cli": "~10.0.6",
+    "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.0.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "lato-font": "^3.0.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.2.2"
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.9.5"
   }
 }
