--- a/findly-builder/tsconfig.json
+++ b/findly-builder/tsconfig.json
@@ -1,30 +1,17 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "target": "es5",
-    "paths": {
-      "@kore.services/*": [ "./src/app/services/*" ],
-      "@kore.shared/*": [ "./src/app/shared/*" ],
-      "@kore.environment": [ "./src/environments/environment" ],
-      "@kore.modules":["./src/app/modules/*"], 
-      "@kore.components":["./src/app/components/*"]
-      
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.app.json"
     },
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ]
-  }
+    {
+      "path": "./tsconfig.spec.json"
+    }
+]
 }
