--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -22,11 +22,14 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@ctrl/ngx-codemirror": "^4.0.1",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
+    "@tinkoff/angular-contenteditable-accessor": "^1.1.0",
     "bootstrap": "^4.5.0",
     "brace": "^0.11.1",
+    "codemirror": "^5.57.0",
     "d3": "^5.16.0",
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
