--- a/findly-builder/angular.json
+++ b/findly-builder/angular.json
@@ -35,14 +35,16 @@
               "src/assets/fonts/inter/inter-font.css",
               "node_modules/codemirror/lib/codemirror.css",
               "node_modules/codemirror/addon/fold/foldgutter.css",
-              "node_modules/codemirror/addon/lint/lint.css"
+              "node_modules/codemirror/addon/lint/lint.css",
+			  "src/assets/css/bootstrap-slider.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/app/helpers/lib/assets/highlight.js/highlight.min.js",
-              "src/app/helpers/lib/assets/marked.min.js"
+              "src/app/helpers/lib/assets/marked.min.js",
+			  "src/assets/js/bootstrap-slider.js"
             ]
           },
           "configurations": {
