--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -34,15 +34,15 @@
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "ng2-file-upload": "^1.4.0",
+    "ng2-pdf-viewer": "^6.3.2",
     "ngx-perfect-scrollbar": "^10.0.1",
     "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
+    "rangy": "^1.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "underscore": "^1.10.2",
-    "zone.js": "~0.10.3",
-    "ng2-pdf-viewer": "^6.3.0",
-    "rangy": "^1.3.0"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
