--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -31,10 +31,12 @@
     "brace": "^0.11.1",
     "codemirror": "^5.57.0",
     "d3": "^5.16.0",
+    "echarts": "^4.9.0",
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
     "ng2-file-upload": "^1.4.0",
     "ng2-pdf-viewer": "^6.3.2",
+    "ngx-echarts": "^5.1.2",
     "ngx-perfect-scrollbar": "^10.0.1",
     "ngx-toastr": "^13.0.0",
     "popper.js": "^1.16.1",
