--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -33,6 +33,7 @@
     "d3": "^5.16.0",
     "echarts": "^4.9.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "ng2-file-upload": "^1.4.0",
     "ng2-pdf-viewer": "^6.3.2",
@@ -44,6 +45,7 @@
     "popper.js": "^1.16.1",
     "rangy": "^1.3.0",
     "rxjs": "~6.5.5",
+    "simplebar": "^5.3.0",
     "simplebar-angular": "^2.3.0",
     "tslib": "^2.0.0",
     "underscore": "^1.10.2",
