--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -33,10 +33,12 @@
     "d3": "^5.16.0",
     "echarts": "^4.9.0",
     "jquery": "^3.5.1",
-    "moment": "^2.27.0",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "ng2-file-upload": "^1.4.0",
     "ng2-pdf-viewer": "^6.3.2",
     "ng5-slider": "^1.2.6",
+    "ngx-daterangepicker-material": "^4.0.1",
     "ngx-echarts": "^5.1.2",
     "ngx-perfect-scrollbar": "^10.0.1",
     "ngx-toastr": "^13.0.0",
