--- a/findly-builder/angular.json
+++ b/findly-builder/angular.json
@@ -32,7 +32,8 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/app/scss/styles.scss",
               "src/assets/fonts/inter/inter-font.css",
-			        "src/assets/css/bootstrap-slider.css"
+              "src/assets/css/bootstrap-slider.css",
+              "node_modules/nouislider/distribute/nouislider.min.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
