--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -36,11 +36,13 @@
     "lodash": "^4.17.20",
     "moment": "^2.27.0",
     "ng2-file-upload": "^1.4.0",
+    "ng2-nouislider": "1.7.12",
     "ng2-pdf-viewer": "^6.3.2",
     "ng5-slider": "^1.2.6",
     "ngx-echarts": "^5.1.2",
     "ngx-perfect-scrollbar": "^10.0.1",
     "ngx-toastr": "^13.0.0",
+    "nouislider": "11.1.0",
     "pdfjs-dist": "^2.2.228",
     "popper.js": "^1.16.1",
     "rangy": "^1.3.0",
