--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -51,7 +51,8 @@
     "simplebar-angular": "^2.3.0",
     "tslib": "^2.0.0",
     "underscore": "^1.10.2",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "pubsub-js": "^1.9.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.5",
