--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -32,6 +32,7 @@
     "codemirror": "^5.57.0",
     "d3": "^5.16.0",
     "echarts": "^4.9.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.24.0",
