--- a/findly-builder/package.json
+++ b/findly-builder/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@ctrl/ngx-codemirror": "^4.0.1",
+    "@ctrl/ngx-emoji-mart": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
